# SysMCP

./: .gitignore  README.md  pyproject.toml
server/: config.py  main.py  process_tools.py  schema.py  security.py  system_tools.py
test/: test_tools.py
